<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS Linguistics</string>
    <string name="about">About</string>
    <string name="changelog">What\'s new</string>
    <string name="personal_name">Personal Statistics</string>
    <string name="personal_description">Analyze sent messages.</string>
    <string name="interpersonal_name">Interpersonal Statistics</string>
    <string name="interpersonal_description">Compare SMS text analytics with contacts.</string>
    <string name="email_description">Email feedback to trnka.dev@gmail.com</string>
    <string name="lid_name">Language Identification Demo</string>
    <string name="email_name">Send Feedback</string>
    <string name="rate_name">Rate the App</string>
    <string name="rate_description">Rate and provide feedback on Google Play.</string>
    <string name="about_stats_name">About the Stats</string>
    <string name="about_app_name">About the App</string>
    <string name="app_descrip">Apply text analytics to your sent messages and see what makes your texts unique!
        You can also apply analytics to your ongoing conversations with contacts to describe personal relationships.</string>
    <string name="app_credits">Made by</string>
    <string name="key_phrases">Key Phrases</string>
    <string name="contacts">Top Contacts</string>
    <string name="stats">General Stats</string>
    <string name="runtime">Profiling</string>
    <string name="developer_email">trnka.dev@gmail.com</string>
    <string name="time_of_day">Messages per hour</string>
    <string name="day_of_week">Messages per day</string>
    <string name="share">Share</string>
    <string name="loading">Scanning texts&#x2026;</string>
    <string name="share_intent">Share with&#x2026;</string>
    <string name="none">none</string>
    <string name="phrases_by">Phrases by</string>
    <string name="not_enough_replies">Not enough replies from %s.</string>
    <string name="key_phrase_description">In personal stats, these are one, two, or three word phrases that are common in your texts but uncommon in general English.  Each potential phrase goes through several linguistic scores before selecting the best phrases.  The primary score is <a href="http://en.wikipedia.org/wiki/Pointwise_mutual_information">pointwise mutual information</a> of the phrase relative to a general English <a href="http://en.wikipedia.org/wiki/N-gram">unigram</a> model.  It\'s weighted towards phrases you use frequently, biased away from phrases that begin or end with common words like \"the\" or \"of\", and several other heuristics.  We demote phrases that are contained within other phrases or else you\'ll get lists that contain \"Red Sox\" and \"Red\" and \"Sox\".</string>
    <string name="shared_phrases_title">Shared Phrases</string>
    <string name="shared_phrases_description">In interpersonal stats, these are one or two word phrases that both you and the contact have texted to each other.  They are scored as phrases that are common in both sides of the conversation, but uncommon in texts from other contacts and uncommon in texts you send to other contacts.</string>
    <string name="shared_vocab_title">Shared Vocabulary</string>
    <string name="shared_vocab_description">This is the <a href="http://en.wikipedia.org/wiki/Jaccard_index">Jaccard coefficient</a>, which is the percentage of words that both you and your contact used (out of the number of words either person used).  In linguistics, we\'d expect higher overlap between the communications with a contact rather than overlap with all of your communications.  But also, keep in mind that statistically speaking, the denominator may be much larger when computing overlap with all your messages.</string>
    <string name="response_time_title">Average Response Time</string>
    <string name="response_time_description">We thread all messages with the contact, then filter out multiple sequential messages from the same person, then filter out any time differences over an hour.  The average of the remaining reply times is what you see.  The one-hour filter was necessary or else the stat was garbage.  It seems somewhat arbitrary, but the response times seem about right.</string>
    <string name="random_generation_title">Random n-gram generation</string>
    <string name="random_generation_description">Use the probabilistic model of each person\'s texts to the other to generate a message.  The messages are generated randomly according to the probability distributions for each word.  For example, at the start of the message it randomly generates some word the person used at the start of the message.  If the person has said \"Hi\" three times at the start and \"What\" once, there\'s a 75 percent chance it\'ll generate \"Hi\" and 25 percent chance it\'ll generate \"What\".  This continues until it generates an end of message symbol or it generates 40+ words.\n\nThe difference between bigram and trigram generation is that bigram generation uses a separate probability table for each possible previous word and trigram generation uses a separate probability table for each possible pair of words.  Statistically, there are so many possible pairs of words that in a small sample of text messages they may uniquely determine the next word.  So the trigram generation tends to reproduce full messages verbatim and bigram generation tends to be more random (but possibly too random).</string>
    <string-array name="sort_phrases_by">
        <item >magic</item>
        <item >freq.</item>
    </string-array>
    <string name="send_email_with">Send email using&#x2026;</string>
    <string name="not_implemented">Not implemented yet</string>
    <string name="error_no_sent_sms">No sent messages found, aborting.</string>
    <string name="error_no_received_sms">No received messages found, aborting.</string>
	<string name="no_phrases">No phrases found.</string>
	<string name="num_messages_format" formatted="false">%s: %d messages\n</string>
	<string name="no_frequent_contacts">No frequent contacts found.</string>
	<string name="num_sent_format" formatted="false">%d sent messages\n</string>
	<string name="words_per_text_format" formatted="false">%d words per message\n</string>
	<string name="chars_per_text_format" formatted="false">%d chars per message\n</string>
	<string name="chars_per_word_format" formatted="false">%.1f average word length\n</string>
	<string name="num_sent_per_month_format" formatted="false">%.1f texts per month\n</string>
	<string name="shared_stats_subject_format" formatted="false">Shared stats from %s</string>
	<string name="interpersonal_share_body_format" formatted="false">Analysis of SMS messages with %s:</string>
	<string name="average_message_length_header">Average message length</string>
	<string name="their_message_length" formatted="false">%s: %.1f words</string>
	<string name="your_message_length" formatted="false">You: %.1f words</string>
	<string name="shared_vocabulary_header">Shared vocabulary (Jaccard)</string>
	<string name="shared_with_them">with texts to them: %.1f%%</string>
	<string name="shared_with_all">with ALL your texts: %.1f%%</string>
	<string name="credits_other">Language resources provided by\n   Hans Christensen (<a href="http://corpora.heliohost.org">web</a>, <a href="mailto:hc.corpus@gmail.com">email</a>)\n   Hermit Dave (<a href="http://invokeit.wordpress.com/frequency-word-lists/">web</a>)\n   Keith Vertanen (<a href="http://www.keithv.com/software/">web</a>)</string>
	<string name="credits_libraries">Third-party libraries\n   <a href="http://www.achartengine.org/">AChartEngine</a> for the graphs\n   <a href="http://actionbarsherlock.com/">ActionBarSherlock</a> for action bars on older Android versions</string>
	<string name="credits_author">Keith Trnka (<a href="mailto:trnka.dev@gmail.com">email</a>)</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_help">Help</string>
	<string name="lid_languages_title">Identifiable Languages</string>
	<string name="lid_supported_languages">Afrikaans\nAlbanian\nArabic\nBulgarian\nChinese\nCroatian\nCzech\nDanish\nDutch\nEnglish\nEstonian\nFinnish\nFrench\nGeorgian\nGerman\nGreek\nHebrew\nHindi\nHungarian\nIcelandic\nIndonesian\nItalian\nJapanese\nKorean\nLatvian\nLithuanian\nMacedonian\nNorwegian\nPersian\nPolish\nPortuguese\nRomanian\nRussian\nSlovak\nSlovenian\nSpanish\nSwedish\nTagalog\nTurkish\nUkrainian\nUrdu\nVietnamese</string>
	<string name="loading_title">Loading&#x2026;</string>
	<string name="diagnostics">Diagnostics</string>
	<string name="contactPhotoDescription">Contact photo</string>
	<string name="randomTrigramTitle">Random trigram generation</string>
	<string name="randomBigramTitle">Random bigram generation</string>
	<string name="testTitle">Title</string>
	<string name="testBody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra metus et ligula accumsan auctor. Nullam luctus neque quis nibh porttitor sagittis. Nunc dignissim quam nec quam scelerisque faucibus. Maecenas elementum ante eget felis vestibulum quis pharetra dui condimentum. In a ligula lectus, aliquet interdum diam. Fusce luctus bibendum tellus, sed iaculis mi vehicula vitae. Fusce quis ipsum in est ultricies egestas a vel orci.</string>
	<string name="personalLabel">Stats about you</string>
	<string name="interpersonalLabel">Stats about your relationships</string>

</resources>