<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardContentRoot"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp" >

    <ImageView
        android:id="@+id/contactImage"
        android:layout_width="@dimen/imagebutton_size"
        android:layout_height="@dimen/imagebutton_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/contactPhotoDescription"
        android:src="@drawable/ic_contact_picture" />

    <TextView
        android:id="@+id/title"
        android:text="@string/testTitle"
        style="@style/CardTitle.Droidling"
        android:layout_width="fill_parent"
        android:layout_alignParentTop="true"
        
        android:layout_toRightOf="@id/contactImage"
        android:layout_toLeftOf="@+id/share"
        />

    <ImageView
        android:id="@+id/share"
        android:padding="@dimen/imagebutton_margin"
        android:layout_width="@dimen/imagebutton_size"
        android:layout_height="@dimen/imagebutton_size"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/selectable_background_droidling"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_menu_share" />
    
    <View
        android:id="@+id/sep"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/stroke"
        android:layout_below="@id/title" />
    
    <TextView
        android:id="@+id/mainText"
        style="@style/Card.RelativelayoutText.Subtext"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/sep"
        android:layout_marginTop="@dimen/title_margin_vert"
        android:bufferType="spannable"
        />

</RelativeLayout>