<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/phrase_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_vert"
    android:paddingTop="@dimen/margin_vert"
    android:paddingLeft="@dimen/margin_horiz"
    android:paddingRight="@dimen/margin_horiz" >

    <TextView
        android:id="@android:id/text1"
        android:text="@string/key_phrases"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/spinner1"
        android:layout_marginBottom="@dimen/title_margin_vert"
        android:layout_marginTop="@dimen/title_margin_vert"
        android:gravity="center_vertical"
        android:textSize="26sp"
        android:textStyle="bold" />

    <!-- TODO: Generalize spinner dimensions -->
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/share"
        android:gravity="center_vertical"
        android:entries="@array/sort_phrases_by" />

    <!-- 8dp left margin is to help prevent accidental touches on the spinner instead of share or vice versa.  8dp was the max I could do without word-wrapping the title -->
    <ImageView
        android:id="@+id/share"
        android:layout_marginTop="@dimen/imagebutton_margin"
        android:layout_marginBottom="@dimen/imagebutton_margin"
        android:layout_marginLeft="8dp"
        android:layout_width="@dimen/imagebutton_width"
        android:layout_height="@dimen/imagebutton_height"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_menu_share" />

    <TextView
        android:id="@android:id/text2"
        android:text="@string/key_phrase_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/text1"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/title_margin_vert"
        android:layout_marginTop="@dimen/title_margin_vert"
        android:textAppearance="?android:attr/textAppearanceMedium" />


</RelativeLayout>